Bug 288521 - Duplicated entries in details view
Summary: Duplicated entries in details view
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (show other bugs)
Version: 1.99
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
: 288511 289284 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-09 09:43 UTC by Igor Poboiko
Modified: 2012-11-29 22:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In: 4.8.0


Attachments
Example for this bug. (137.43 KB, image/png)
2011-12-09 09:44 UTC, Igor Poboiko
Details
Figure 1 (58.21 KB, image/png)
2012-03-09 03:33 UTC, Jay LaCroix
Details
Figure 2 (67.74 KB, image/png)
2012-03-09 03:34 UTC, Jay LaCroix
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Igor Poboiko 2011-12-09 09:43:39 UTC
Version:           1.99 (using Devel) 
OS:                Linux

I use KDE SC 4.7.90 from Gentoo KDE overlay.
I also use dolphin with expandable directories.
When I expands one directory many times fast (for example, using "Left arrow" and "right arrow" hotkeys on same directory), and then stops, it shows lots of duplicated entries in expanded directory. See attached screenshot for example.

Reproducible: Always

Steps to Reproduce:
1. Open Dolphin.
2. Select "Details" view with expandable folders in settings.
3. Select any directory with some subfolders.
4. Press "Left" and "Right" arrows fast.

Actual Results:  
Dolphin shows many duplicated entries in expanded directory.

Expected Results:  
...
Comment 1 Igor Poboiko 2011-12-09 09:44:12 UTC
Created attachment 66534 [details]
Example for this bug.
Comment 2 Peter Penz 2011-12-09 15:18:52 UTC
*** Bug 288511 has been marked as a duplicate of this bug. ***
Comment 3 Peter Penz 2011-12-09 20:53:15 UTC
Git commit 30ae57ba807ecadfdef833a4895621fc330badc9 by Peter Penz.
Committed on 09/12/2011 at 21:49.
Pushed by ppenz into branch 'master'.

Fix issue with duplicate items in details view

When expanding an item, collapsing it and expanding it again before the items for the first expanding could be loaded, it was possible that items have been inserted twice into the model.

BUG: 288521
FIXED-IN: 4.8.0

M  +21   -1    dolphin/src/kitemviews/kfileitemmodel.cpp

http://commits.kde.org/kde-baseapps/30ae57ba807ecadfdef833a4895621fc330badc9
Comment 4 Tommi Tervo 2011-12-18 16:32:28 UTC
*** Bug 289284 has been marked as a duplicate of this bug. ***
Comment 5 Jay LaCroix 2011-12-23 05:20:06 UTC
Just as an update, I am running RC1 and still have this problem. I know this is fixed, but not sure if the intended patch made it into RC1, so I wanted to mention this to be sure in case it's not fixed.
Comment 6 Peter Penz 2011-12-23 08:31:43 UTC
The patch is in RC1 - if you still have this problem it would be great if you could post a detailed description how to reproduce the issue. I cannot reproduce the issue here with the steps mentioned in the initial bug-report.
Comment 7 Jay LaCroix 2011-12-23 15:02:56 UTC
It still happens as described. To be safe, I am attaching a video of this issue so you can actually see it.
Comment 8 Jay LaCroix 2011-12-23 15:04:38 UTC
Actually, it won't accept my attachment because it's over 1MB (1.4MB I think). I would love to send this to you guys, if you can tell me how.
Comment 9 Peter Penz 2011-12-23 15:12:29 UTC
You can send me the file to peter.penz19@gmail.com, probably you do something different than I (although I cannot imagine currently what to do different when clicking fast on an icon ;-)). What could also be is that your RC1 is not really the tagged RC1 version. May I ask where you got the RC1?
Comment 10 Peter Penz 2011-12-23 15:15:46 UTC
@Jay: Please forget my previous comment, I could reproduce it now :-) The trick was to use the keys and not the mouse - my fault, sorry for the noise!
Comment 11 Jay LaCroix 2011-12-23 15:21:51 UTC
I don't understand, I did use my mouse.
Comment 12 Peter Penz 2011-12-23 20:14:46 UTC
Git commit 18cf764fe85aafbab432a9028b105faf40610a66 by Peter Penz.
Committed on 23/12/2011 at 21:10.
Pushed by ppenz into branch 'KDE/4.8'.

Fix possible double entries in details view

The patch 30ae57ba807ecadfdef833a4895621fc330badc9 did not resolve the
issue completely: The pending items to insert must be dispatched before
checking for duplicates.

Related to this report the expanding for the remote-protocol has been
disabled.

BUG: 288521
FIXED-IN: 4.8.0

M  +6    -1    dolphin/src/kitemviews/kfileitemmodel.cpp

http://commits.kde.org/kde-baseapps/18cf764fe85aafbab432a9028b105faf40610a66
Comment 13 Peter Penz 2011-12-23 20:16:04 UTC
Git commit 2d751d15b7e87dca306c50b23a334e413ff1928a by Peter Penz.
Committed on 23/12/2011 at 21:10.
Pushed by ppenz into branch 'master'.

Fix possible double entries in details view

The patch 30ae57ba807ecadfdef833a4895621fc330badc9 did not resolve the
issue completely: The pending items to insert must be dispatched before
checking for duplicates.

Related to this report the expanding for the remote-protocol has been
disabled.

BUG: 288521
FIXED-IN: 4.8.0

M  +6    -1    dolphin/src/kitemviews/kfileitemmodel.cpp

http://commits.kde.org/kde-baseapps/2d751d15b7e87dca306c50b23a334e413ff1928a
Comment 14 Peter Penz 2011-12-23 22:19:37 UTC
Git commit 531d04afa5bf14f7da29f87235eb478fe71f2d18 by Peter Penz.
Committed on 23/12/2011 at 23:05.
Pushed by ppenz into branch 'KDE/4.8'.

Introduce "isExpandable" role

The role is used to determine whether a directory can be expanded at all. This
is e.g. not the case if a directory has 0 items or the target-URL is different
from the item-URL.

The expansion toggle will get hidden if a directory is not expandable.

CCBUG: 288521

M  +1    -0    dolphin/src/kitemviews/kfileitemlistview.cpp
M  +4    -4    dolphin/src/kitemviews/kfileitemlistwidget.cpp
M  +1    -1    dolphin/src/kitemviews/kfileitemlistwidget.h
M  +9    -5    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +1    -0    dolphin/src/kitemviews/kfileitemmodel.h
M  +23   -10   dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +1    -1    dolphin/src/kitemviews/kfileitemmodelrolesupdater.h
M  +1    -1    dolphin/src/tests/kfileitemmodeltest.cpp

http://commits.kde.org/kde-baseapps/531d04afa5bf14f7da29f87235eb478fe71f2d18
Comment 15 Peter Penz 2011-12-23 22:20:02 UTC
Git commit bad59c97d61f06e6d9f1034d5239ec69420bba52 by Peter Penz.
Committed on 23/12/2011 at 23:05.
Pushed by ppenz into branch 'master'.

Introduce "isExpandable" role

The role is used to determine whether a directory can be expanded at all. This
is e.g. not the case if a directory has 0 items or the target-URL is different
from the item-URL.

The expansion toggle will get hidden if a directory is not expandable.

CCBUG: 288521

M  +1    -0    dolphin/src/kitemviews/kfileitemlistview.cpp
M  +4    -4    dolphin/src/kitemviews/kfileitemlistwidget.cpp
M  +1    -1    dolphin/src/kitemviews/kfileitemlistwidget.h
M  +9    -5    dolphin/src/kitemviews/kfileitemmodel.cpp
M  +1    -0    dolphin/src/kitemviews/kfileitemmodel.h
M  +23   -10   dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +1    -1    dolphin/src/kitemviews/kfileitemmodelrolesupdater.h
M  +1    -1    dolphin/src/tests/kfileitemmodeltest.cpp

http://commits.kde.org/kde-baseapps/bad59c97d61f06e6d9f1034d5239ec69420bba52
Comment 16 Jay LaCroix 2012-03-08 02:39:10 UTC
This bug has returned as of 4.8.1.
Comment 17 Peter Penz 2012-03-08 08:05:19 UTC
Hm, I could not reproduce it yet with 4.8.1 but I'll also try it on another (slower) computer.
Comment 18 Jay LaCroix 2012-03-09 03:33:21 UTC
It's 100% reproducible for me with 4.8.1, and it's exactly how it was during beta all over again.

1. ) Bring up remote:/ in Dolphin (I click on "Network")

2.) Click on "Samba Shares"

3.) Click on your workgroup name

4.) A list of network devices appears (figure 1)

5.) Expand one of them and it will expand inline with the other devices (figure 2)
Comment 19 Jay LaCroix 2012-03-09 03:33:49 UTC
Created attachment 69398 [details]
Figure 1
Comment 20 Jay LaCroix 2012-03-09 03:34:10 UTC
Created attachment 69399 [details]
Figure 2
Comment 21 Peter Penz 2012-03-09 07:28:28 UTC
Thanks for the hints - I currently cannot reproduce the issue here (having no samba-share available at the moment and it does not seem to occur with my other network-content). Do you probably know a way to reproduce this issue with "normal" directories like in your initial report? Probably this issue is only smb-related...
Comment 22 Jay LaCroix 2012-03-10 19:38:39 UTC
As far as I know, it's samba only.
Comment 23 Peter Penz 2012-03-10 20:28:11 UTC
OK, let's open it again to fix this remaining issue.
Comment 24 Jeroen van Meeuwen (Kolab Systems) 2012-08-24 16:22:31 UTC
Resetting assignee to default as per bug #305719
Comment 25 Frank Reininghaus 2012-11-29 22:07:22 UTC
Closing because the issue which has originally been discussed here is fixed. For the new problem in comment 18, see bug 304565.